--- a/app/src/main/res/layout/quote.xml
+++ b/app/src/main/res/layout/quote.xml
@@ -18,6 +18,17 @@
         android:background="@color/primary"
         android:padding="10dp"
         android:textColor="@android:color/white"
-        android:textSize="15sp" />
+        android:textSize="17sp" />
+
+    <TextView
+        android:id="@+id/tv_author"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:background="@color/primary"
+        android:padding="10dp"
+        android:textColor="@android:color/white"
+        android:textSize="17sp"
+        android:visibility="gone" />
 
 </android.support.v7.widget.CardView>
